# SparkEdgeSim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dgx_spark_default.yaml  edge_unit_default.yaml  edge_unit_high_density.yaml  edge_unit_lightweight.yaml  gp_spark_default.yaml
docs/: index.md
examples/: dual_edge_unit.py  large_scale_config.py  multi_edge_cloud.py  single_node_batch.py  single_node_task.py  skygrid_style.py
src/dgx_gp_spark_sim/: __init__.py  cli.py  client.py  config.py  models.py
src/dgx_gp_spark_sim/api/: __init__.py  server.py
src/dgx_gp_spark_sim/edge_unit/: __init__.py  compute.py  node.py  storage.py
src/dgx_gp_spark_sim/integrations/: __init__.py  skygrid_adapter.py
src/dgx_gp_spark_sim/network/: __init__.py  model.py
src/dgx_gp_spark_sim/scheduler/: __init__.py  scheduler.py
src/dgx_gp_spark_sim/sim/: __init__.py  engine.py
src/dgx_gp_spark_sim/state/: __init__.py  store.py
src/dgx_gp_spark_sim/telemetry/: __init__.py  collector.py
src/dgx_gp_spark_sim/workloads/: __init__.py  plugins.py
tests/: test_api.py  test_compute.py  test_config.py  test_integration.py  test_network.py  test_scheduler.py  test_state.py  test_storage.py  test_telemetry.py
