[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgx-gp-spark-sim"
version = "0.1.0"
description = "Interface-compatible, parameterized, hardware-aware edge compute unit simulator for DGX Spark & GP Spark"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "SparkEdgeSim Contributors" }]
keywords = ["edge-computing", "simulator", "dgx-spark", "gp-spark", "distributed-systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "numpy>=1.26",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
grpc = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
]

[project.scripts]
edge-unit-sim = "dgx_gp_spark_sim.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/SparkEdgeSim"
Repository = "https://github.com/your-org/SparkEdgeSim"
Documentation = "https://your-org.github.io/SparkEdgeSim"

[tool.hatch.build.targets.wheel]
packages = ["src/dgx_gp_spark_sim"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
